--- a/projects.html
+++ b/projects.html
@@ -82,9 +82,9 @@
                         <div class="col-lg-4 mb-5">
                             <div class="card overflow-hidden shadow rounded-4 border-0 h-100">
                                 <div class="card-body p-5">
-                                    <h2 class="fw-bolder"><a href="https://github.com/chaos-hunter/Currency-Calculator/tree/main" target="_blank">Currency Calculator</a></h2>
-                                    <p>Implimented in python using Tikinter as it's platform, this calculator uses an exchange rate api, you enter the amount
-                                        you want to convert then the country your coverting from and the country your converting to.
+                                    <h2 class="fw-bolder"><a href="https://currencycalculator-0156b88d1bc4.herokuapp.com/" target="_blank">Currency Calculator</a></h2>
+                                    <p>Implimented in python using django and html, this calculator uses an exchange rate api, you enter the amount
+                                        you want to convert then the currency your coverting from and the currency your converting to, using a cloud this website runs and can be viewwed from the link above.
                                     </p>
                                 </div>
                             </div>
