--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
                             <div class="card overflow-hidden shadow rounded-4 border-0 h-100">
                                 <div class="card-body p-5">
                                     <h2 class="fw-bolder"><a href="https://currencycalculator-0156b88d1bc4.herokuapp.com/" target="_blank">Currency Calculator</a></h2>
-                                    <p>Implimented in python using django and html, this calculator uses an exchange rate api, you enter the amount
+                                    <p>Implemented in python using django and html, this calculator uses an exchange rate api, you enter the amount
                                         you want to convert then the currency your coverting from and the currency your converting to, using a cloud this website runs and can be viewwed from the link above.
                                     </p>
                                 </div>
