--- a/projects.html
+++ b/projects.html
@@ -93,8 +93,10 @@
                         <div class="col-lg-4 mb-5">
                             <div class="card overflow-hidden shadow rounded-4 border-0 h-100">
                                 <div class="card-body p-5">
-                                    <h2 class="fw-bolder"><a href="https://github.com/chaos-hunter/Weather-and-news-app" target="_blank">Weather and news app</a></h2>
-                                    <p>App was developed in python using tkinter as the UI it makes use of https://www.thenewsapi.com/ and https://open-meteo.com/ api, it shows a weather forecast for the next 24 hours and top3 news headlines in that country.</p>
+                                    <h2 class="fw-bolder"><a href="https://weather-news-app-0b1b3b773859.herokuapp.com/" target="_blank">Weather and news app</a></h2>
+                                    <p>The app devoloped with python flask framework using html for its design, functions with the use of api's for geocoding, weather finding, news highlight searching.
+                                    When entered the top is  prompt for city where you want the next 24 hour weather prediction and country to see the top 10 news highlights of the country of your choice
+                                    the get data btton refreshes the information loaded</p>
                                 </div>
                             </div>
                         </div>
