--- a/projects.html
+++ b/projects.html
@@ -104,8 +104,10 @@
                         <div class="col-lg-4 mb-5">
                             <div class="card overflow-hidden shadow rounded-4 border-0 h-100">
                                 <div class="card-body p-5">
-                                    <h2 class="fw-bolder"><a href="https://github.com/chaos-hunter/Shooter-game" target="_blank">Shooter game</a></h2>
-                                    <p>A simple shooter style game developed in python, using pygmae for the game layout the game is a retro 2d style game.</p>
+                                    <h2 class="fw-bolder"><a href="https://spaceship-shootergame.netlify.app/" target="_blank">Space Shooter game</a></h2>
+                                    <p>A simple space shooter retro style game developed in html, using javascript for the control, css for the designs. When loaded in an instruction menu will
+                                    display when clicked on start the game starts, for laptop arrow keys control the movements. space to fire goal is to collect as many
+                                    gold orbs as possbile, while avoiding meteors.</p>
                                 </div>
                             </div>
                         </div>
